# vscode-profile-importer-rust

./: .gitignore  Cargo.toml  README_RUST.md  rust-dev-prof.sh  vscode-profile-extensions.sh
.github/workflows/: build-deb.yml  ci.yml
package_files/usr/share/doc/vscode-profile-importer/: INSTALL_SYSTEMD.md  README_EXAMPLES.md
package_files/usr/share/doc/vscode-profile-importer/examples/: vscode-profile-importer-sync.service  vscode-profile-importer-sync.timer
package_files/usr/share/man/man1/: install_systemd_user.1
package_files/usr/share/vscode-profile-importer/examples/: example.code-profile  python.code-profile  rust.code-profile  webdev.code-profile
packaging_files/usr/share/doc/vscode-profile-importer/: INSTALL_SYSTEMD.md  README_EXAMPLES.md
packaging_files/usr/share/doc/vscode-profile-importer/examples/: vscode-profile-importer-sync.service
packaging_files/usr/share/man/man1/: install_systemd_user.1
packaging_files/usr/share/vscode-profile-importer/examples/: rust.code-profile  webdev.code-profile
scripts/: build_deb.sh  run_tests.sh
src/: Makefile  lib.rs  main.rs
tests/: cli_integration.rs  management_integration.rs  packaging_integration.rs  real_vscode_detection.rs  use_code_cli_integration.rs
