[package]
name = "vscode_profile_importer"
version = "0.1.0"
edition = "2021"
description = "Safe, fault-tolerant VSCode profile importer (Rust port)"
license = "MIT"
readme = "README_RUST.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.12"
clap = { version = "4.6", features = ["derive"] }
which = "8.0"
shellexpand = "3.1"
tempfile = "3.27"
wait-timeout = "0.2"

[[bin]]
name = "vscode-profile-importer"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3.1.4"
